force-app/main/default/objects/Change_Request_Related_Department__c/Change_Request_Related_Department__c.object-meta.xml
<CustomObject>
    <label>Change Request Related Department</label>
    <nameField>
        <displayFormat>CRD-{00000000}</displayFormat>
        <label>Change Request Related Department Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request Related Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>