force-app/main/default/objects/Change_Request_Related_Department__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>