force-app/main/default/objects/Change_Request_Related_Department__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <inlineHelpText>Select the relationship that best captures the Department&apos;s relationship to the Change Request should it be implemented. Implementation Resource should be selected for teams who are both resources and will be directly impacted by the implementation.</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Department</fullName>
            </value>
            <value>
                <fullName>Implementation Resource</fullName>
            </value>
            <value>
                <fullName>Direct Implementation Impact</fullName>
            </value>
            <value>
                <fullName>Indirect Implementation Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>